--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
     "node-fetch": "^2.7.0",
+    "wav": "^1.0.2",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
     "@types/node-fetch": "^2.6.9",
+    "@types/wav": "^1.0.4",
     "@types/yargs": "^17.0.32",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
