--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fluent-ffmpeg": "^2.1.2",
     "node-fetch": "^2.7.0",
     "wav": "^1.0.2",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.10.4",
     "@types/node-fetch": "^2.6.9",
     "@types/wav": "^1.0.4",
